# school_plataform

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  mkdocs.yml  pyproject.toml  pytest.ini  run_fast_api.py
docs/: index.md
docs/api-reference/source/domain/: controller.md
src/applications/dtos/: __init__.py  user.py
src/applications/enums/user/: errors.py  success.py
src/applications/services/: user.py
src/applications/use_cases/user/: create_user.py  delete_user.py  delete_user_use_case.py  get_user.py  get_user_by_email.py
src/domain/: controller.py
src/domain/entities/: user.py
src/domain/enums/: user_error.py
src/domain/repositories/: user.py
src/domain/services/: user.py
src/domain/use_cases/user/: create_user.py  delete_user.py  get_user.py  get_user_by_email.py
src/infra/db/alembic/: env.py
src/infra/db/relational_db/: __init__.py  db_connection_handler.py
src/infra/db/settings/: __init__.py  connection.py
src/infra/fast_api/: server.py
src/infra/fast_api/routers/: router.py  user.py
src/infra/models/: user.py
src/infra/repositories/: user.py
src/main/adapter/: __init__.py  api_adapter.py  fast_api.py  fast_api_adapter.py
src/main/composer/: __init__.py
src/main/composer/user/: __init__.py  (+5 more)
src/main/interfaces/: route.py
src/presenters/controllers/: __init__.py
src/presenters/errors/: http_errors.py
src/presenters/success/: http_success.py
tests/: conftest.py
tests/fixtures/: __init__.py
tests/fixtures/entities/: user.py
(+104 files in other folders)
