[tool.poetry]
name = "school-plataform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "school_plataform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = {version = "^2.0.2", extras = ["email"]}



[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
