[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.poetry]
name = "school-plataform"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "school_plataform", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {version = "^2.0.2", extras = ["email"]}
pylint = "^2.17.4"
sqlalchemy = "^2.0.18"
uvicorn = {extras = ["standard"], version = "^0.23.0"}
fastapi = "^0.100.0"
psycopg2-binary = "^2.9.6"
httpx = "^0.24.1"
alembic = "^1.11.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pylint = "^2.17.4"
flake8 = "^6.0.0"
black = "^23.3.0"
pre-commit = "^3.3.3"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
mkdocs = "^1.5.2"
mkdocs-material = "^9.1.21"
mkdocstrings = {extras = ["python"], version = "^0.22.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
